// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> renders all but no teaser text within strong tags 1`] = `
<div
  className="text"
>
  <Tag
    type="h2"
  >
    Hello Jest
  </Tag>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Let's write some tests",
      }
    }
  />
</div>
`;

exports[`<Text> renders all tags with content 1`] = `
<div
  className="text"
>
  <Tag
    type="h1"
  >
    Hello Jest
  </Tag>
  <strong
    dangerouslySetInnerHTML={
      Object {
        "__html": "This is a teaser text.",
      }
    }
  />
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Let's write some tests",
      }
    }
  />
</div>
`;

exports[`<Text> renders nothing 1`] = `
<div
  className="text"
/>
`;

exports[`<Text> renders only teaser text within strong tag 1`] = `
<div
  className="text"
>
  <strong
    dangerouslySetInnerHTML={
      Object {
        "__html": "This is a teaser text.",
      }
    }
  />
</div>
`;

exports[`<Text> renders only text within p tags 1`] = `
<div
  className="text"
>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Let's write some tests",
      }
    }
  />
</div>
`;
